Security/Sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
