Security/Sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  labels:
    name: sonarqube-ingress
spec:
  rules:
    - host: sonarqube-cluster.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
